--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://shannonnolan17.github.io/portfolio",
-  "name": "portfolio",
+  "homepage": "https://flash00.github.io/Portfolio",
+  "name": "Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
